week_4: 5/6 feladat idő hiányában kimaradt
